// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation/Component - TabButton snapshots should render default state 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  testID=""
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/navigation/home.png",
        }
      }
      style={
        Object {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#8f8f8f",
            "fontFamily": "Oswald-Regular",
            "fontSize": 12,
          },
          false,
        ]
      }
    >
      Tab Button
    </Text>
  </Component>
</TouchableWithoutFeedback>
`;

exports[`Navigation/Component - TabButton snapshots should render with selected state 1`] = `
<TouchableWithoutFeedback
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  testID=""
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/navigation/home_fill.png",
        }
      }
      style={
        Object {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#8f8f8f",
            "fontFamily": "Oswald-Regular",
            "fontSize": 12,
          },
          Object {
            "color": "#0d7fcc",
          },
        ]
      }
    >
      Tab Button
    </Text>
  </Component>
</TouchableWithoutFeedback>
`;
